<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.informations.InfoActivity">

    <LinearLayout
        android:id="@+id/title_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_layout_margin"
        app:layout_constraintBottom_toTopOf="@+id/information_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/default_big_progress_circle_size"
            android:layout_height="@dimen/default_big_progress_circle_size"
            android:layout_margin="@dimen/default_card_margin"
            android:src="@drawable/ic_rovedoll" />

        <TextView
            style="@style/TextSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/default_card_margin"
            android:src="@drawable/ic_rovedoll"
            android:text="@string/app_name" />

    </LinearLayout>

    <TextView
        android:id="@+id/information_version"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_margin="@dimen/default_layout_margin2"
        android:text="@string/information_version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"/>

    <TextView
        android:id="@+id/information_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_layout_margin2"
        android:text="@string/information_developer"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_version" />

</android.support.constraint.ConstraintLayout>