<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_splash"
    tools:context="com.android.gjprojection.roveedoll.SplashActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_layout_margin"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/default_white"
                    android:textSize="@dimen/default_text_big"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/generic_tm"
                    android:textAllCaps="true"
                    android:textSize="@dimen/default_text_subtitle" />

            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/default_logo_size"
                android:layout_height="@dimen/default_logo_size"
                android:src="@drawable/ic_rovedoll" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/default_layout_margin">

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_card_margin"
        android:layout_marginStart="@dimen/default_card_margin"
        android:background="@drawable/shape_semi_layout"
        android:paddingBottom="@dimen/default_card_margin"
        android:paddingLeft="@dimen/default_layout_margin"
        android:paddingRight="@dimen/default_layout_margin"
        android:paddingTop="@dimen/default_layout_margin"
        android:text="@string/generic_powered_by_unive_students"
        android:textAlignment="center"
        android:textSize="@dimen/default_text_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
