<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintedMenuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorExtraContentCard"
    tools:context=".MainActivity">

    <!-- Card MODALITA' PROGRAMMATA - vla -->
    <android.support.v7.widget.CardView
        android:id="@+id/programmedMode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_layout_margin"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/default_card_margin"
        app:cardElevation="@dimen/default_card_margin"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/programmedPlayDescript"
                android:scaleType="centerInside"
                android:src="@drawable/progamed_mode" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/default_gray_transparent"
                android:orientation="horizontal"
                android:padding="@dimen/default_card_margin"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    style="@style/TextSubtitle.White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/programmedModeText"
                    tools:text="@string/programmedModeText" />

                <ImageView
                    android:layout_width="@dimen/default_layout_margin2"
                    android:layout_height="@dimen/default_layout_margin2"
                    android:layout_gravity="end"
                    android:contentDescription="@string/programmedModeIconDescript"
                    android:src="@drawable/ic_play" />


            </FrameLayout>


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <!-- Card MODALITA' MANUALE - Luk -->
    <android.support.v7.widget.CardView
        android:id="@+id/manualMode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_layout_margin"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/default_card_margin"
        app:cardElevation="@dimen/default_card_margin"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/programmedMode"
        app:layout_constraintVertical_weight="1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/manual_mode" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/default_gray_transparent"
                android:orientation="horizontal"
                android:padding="@dimen/default_card_margin"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    style="@style/TextSubtitle.White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/manualModeText" />

                <ImageView
                    android:layout_width="@dimen/default_layout_margin2"
                    android:layout_height="@dimen/default_layout_margin2"
                    android:layout_gravity="end"
                    android:contentDescription="@string/programmedModeIconDescript"
                    android:src="@drawable/ic_play" />


            </FrameLayout>


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <!-- Card Information app  -->
    <android.support.v7.widget.CardView
        android:id="@+id/information"
        android:layout_width="160dp"
        android:layout_height="75dp"
        android:layout_margin="@dimen/default_layout_margin"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/default_card_margin"
        app:cardElevation="@dimen/default_card_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tutorial"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".35"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manualMode"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/information_img"
                android:layout_width="37dp"
                android:layout_height="29dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/information_img" />

            <TextView
                android:id="@+id/information_title"
                style="@style/TextSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_card_margin"
                android:text="@string/information_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/information_img"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <!-- Card Tutorial app  -->
    <android.support.v7.widget.CardView
        android:id="@+id/tutorial"
        android:layout_width="160dp"
        android:layout_height="75dp"
        android:layout_margin="@dimen/default_layout_margin"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/default_card_margin"
        app:cardElevation="@dimen/default_card_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".35"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manualMode"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/tutorial_img"
                android:layout_width="37dp"
                android:layout_height="29dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/tutorials" />

            <TextView
                android:id="@+id/tutorial_title"
                style="@style/TextSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_card_margin"
                android:text="@string/tutorials"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@+id/tutorial_img"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/connecting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_gray_transparent"
        android:elevation="@dimen/default_layout_margin2"
        android:orientation="horizontal"
        android:padding="@dimen/default_half_card_margin">

        <ProgressBar
            android:layout_width="@dimen/default_small_progress_circle_size"
            android:layout_height="@dimen/default_small_progress_circle_size"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/default_card_margin" />

        <TextView
            style="@style/TextSubtitle.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/default_card_margin"
            android:text="@string/connecting_to_ev3" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
